[gd_scene load_steps=4 format=3 uid="uid://cj0imkffefjn8"]

[ext_resource type="Texture2D" uid="uid://batx04rk5lyy7" path="res://lib/images/levelselect.png" id="1_arx1m"]
[ext_resource type="Script" path="res://select.gd" id="1_whokx"]
[ext_resource type="Texture2D" uid="uid://cbfmvxsyceg3g" path="res://lib/images/lock.png" id="3_m741v"]

[node name="select" type="CanvasLayer"]
script = ExtResource("1_whokx")

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("1_arx1m")
metadata/_edit_use_anchors_ = true

[node name="level1" type="ReferenceRect" parent="."]
offset_left = 50.0
offset_top = 108.0
offset_right = 172.0
offset_bottom = 225.0
metadata/_edit_use_anchors_ = true

[node name="level1lock" type="TextureRect" parent="level1"]
layout_mode = 0
offset_left = 15.0
offset_top = 16.0
offset_right = 97.0
offset_bottom = 95.0
texture = ExtResource("3_m741v")

[node name="level2" type="ReferenceRect" parent="."]
offset_left = 230.0
offset_top = 108.0
offset_right = 354.0
offset_bottom = 224.0

[node name="level2lock" type="TextureRect" parent="level2"]
layout_mode = 0
offset_left = 17.0
offset_top = 15.0
offset_right = 99.0
offset_bottom = 94.0
texture = ExtResource("3_m741v")

[node name="level3" type="ReferenceRect" parent="."]
offset_left = 418.0
offset_top = 108.0
offset_right = 540.0
offset_bottom = 225.0

[node name="level3lock" type="TextureRect" parent="level3"]
layout_mode = 0
offset_left = 16.0
offset_top = 13.0
offset_right = 98.0
offset_bottom = 92.0
texture = ExtResource("3_m741v")

[node name="level4" type="ReferenceRect" parent="."]
offset_left = 49.0
offset_top = 274.0
offset_right = 172.0
offset_bottom = 391.0

[node name="level4lock" type="TextureRect" parent="level4"]
layout_mode = 0
offset_left = 17.0
offset_top = 15.0
offset_right = 99.0
offset_bottom = 94.0
texture = ExtResource("3_m741v")

[node name="level5" type="ReferenceRect" parent="."]
offset_left = 232.0
offset_top = 280.0
offset_right = 355.0
offset_bottom = 398.0

[node name="level5lock" type="TextureRect" parent="level5"]
layout_mode = 0
offset_left = 20.0
offset_top = 17.0
offset_right = 102.0
offset_bottom = 96.0
texture = ExtResource("3_m741v")

[node name="level6" type="ReferenceRect" parent="."]
offset_left = 423.0
offset_top = 282.0
offset_right = 544.0
offset_bottom = 398.0

[node name="level6lock" type="TextureRect" parent="level6"]
layout_mode = 0
offset_left = 19.0
offset_top = 13.0
offset_right = 101.0
offset_bottom = 92.0
texture = ExtResource("3_m741v")

[node name="shop" type="ReferenceRect" parent="."]
offset_left = 202.0
offset_top = 418.0
offset_right = 392.0
offset_bottom = 469.0
